// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SystemPolicyCards component should render loading state 1`] = `
<DocumentFragment>
  <div
    class="pf-l-grid pf-m-gutter"
  >
    <div
      class="pf-l-grid__item pf-m-12-col-on-sm pf-m-12-col-on-md pf-m-6-col-on-lg pf-m-4-col-on-xl"
    >
      <article
        class="pf-c-card"
        data-ouia-component-id="PolicyCard"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
        style="height: 100%;"
      >
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-c-content margin-bottom-md"
          >
            <h4
              class="margin-bottom-top-none"
              data-ouia-component-id="PolicyCardName"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              <div
                class="pf-l-stack ins-c-truncate is-block"
              >
                <div
                  class="pf-l-stack__item"
                >
                  <span
                    widget-type="InsightsTruncateBlock"
                  >
                    PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7
                  </span>
                </div>
              </div>
            </h4>
            <small
              class=""
              data-ouia-component-id="PolicyCardType"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              <div
                class="pf-l-stack ins-c-truncate is-block"
              >
                <div
                  class="pf-l-stack__item"
                >
                  <span
                    widget-type="InsightsTruncateBlock"
                  >
                    PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7
                  </span>
                </div>
              </div>
            </small>
          </div>
          <div
            class="margin-bottom-md"
          >
            <div
              class="ins-c-policy-card ins-m-noncompliant"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                />
              </svg>
               Not compliant
            </div>
            <small
              class=""
              data-ouia-component-id="PolicyCardFailedRulesScore"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              10 rules failed 
              <span>
                (Score: 75%)
              </span>
            </small>
          </div>
          <small
            class="margin-bottom-none"
            data-ouia-component-id="OUIA-Generated-Text-4"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <p
              class=""
              data-ouia-component-id="PolicyCardSSGVersion"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              SSG version: 0.1.45
            </p>
            <p
              class=""
              data-ouia-component-id="PolicyCardLastScanned"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Last scanned: 
              <span>
                2 years ago
              </span>
            </p>
          </small>
        </div>
      </article>
    </div>
    <div
      class="pf-l-grid__item pf-m-4-col"
    >
      <article
        class="pf-c-card"
        data-ouia-component-id="OUIA-Generated-Card-2"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__body"
        >
          <instagram />
        </div>
      </article>
    </div>
    <div
      class="pf-l-grid__item pf-m-4-col"
    >
      <article
        class="pf-c-card"
        data-ouia-component-id="OUIA-Generated-Card-3"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__body"
        >
          <instagram />
        </div>
      </article>
    </div>
    <div
      class="pf-l-grid__item pf-m-4-col"
    >
      <article
        class="pf-c-card"
        data-ouia-component-id="OUIA-Generated-Card-4"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__body"
        >
          <instagram />
        </div>
      </article>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SystemPolicyCards component should render real table 1`] = `
<DocumentFragment>
  <div
    class="pf-l-grid pf-m-gutter"
  >
    <div
      class="pf-l-grid__item pf-m-12-col-on-sm pf-m-12-col-on-md pf-m-6-col-on-lg pf-m-4-col-on-xl"
    >
      <article
        class="pf-c-card"
        data-ouia-component-id="PolicyCard"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
        style="height: 100%;"
      >
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-c-content margin-bottom-md"
          >
            <h4
              class="margin-bottom-top-none"
              data-ouia-component-id="PolicyCardName"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              <div
                class="pf-l-stack ins-c-truncate is-block"
              >
                <div
                  class="pf-l-stack__item"
                >
                  <span
                    widget-type="InsightsTruncateBlock"
                  >
                    PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7
                  </span>
                </div>
              </div>
            </h4>
            <small
              class=""
              data-ouia-component-id="PolicyCardType"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              <div
                class="pf-l-stack ins-c-truncate is-block"
              >
                <div
                  class="pf-l-stack__item"
                >
                  <span
                    widget-type="InsightsTruncateBlock"
                  >
                    PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7
                  </span>
                </div>
              </div>
            </small>
          </div>
          <div
            class="margin-bottom-md"
          >
            <div
              class="ins-c-policy-card ins-m-noncompliant"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                />
              </svg>
               Not compliant
            </div>
            <small
              class=""
              data-ouia-component-id="PolicyCardFailedRulesScore"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              10 rules failed 
              <span>
                (Score: 75%)
              </span>
            </small>
          </div>
          <small
            class="margin-bottom-none"
            data-ouia-component-id="OUIA-Generated-Text-10"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <p
              class=""
              data-ouia-component-id="PolicyCardSSGVersion"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              SSG version: 0.1.45
            </p>
            <p
              class=""
              data-ouia-component-id="PolicyCardLastScanned"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Last scanned: 
              <span>
                2 years ago
              </span>
            </p>
          </small>
        </div>
      </article>
    </div>
  </div>
</DocumentFragment>
`;
